--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+ipython = "*"
 
 [packages]
 requests = "*"
 boto3 = "*"
+python3 = "*"
+ipython = "*"
 
 [requires]
 python_version = "3.7"
